--- a/snap-time-picker/src/main/res/layout/layout_snap_time_picker_dialog.xml
+++ b/snap-time-picker/src/main/res/layout/layout_snap_time_picker_dialog.xml
@@ -142,6 +142,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/snap_time_picker_cancel"
+                android:textAllCaps="false"
                 app:layout_constraintBottom_toBottomOf="@id/button_confirm"
                 app:layout_constraintEnd_toStartOf="@id/button_confirm" />
 
@@ -154,6 +155,7 @@
                 android:layout_marginEnd="@dimen/snap_time_picker_margin_padding"
                 android:layout_marginBottom="@dimen/snap_time_picker_margin_padding"
                 android:text="@string/snap_time_picker_confirm"
+                android:textAllCaps="false"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
 
